--- a/users/templates/users/pages/password_reset_confirm_form.html
+++ b/users/templates/users/pages/password_reset_confirm_form.html
@@ -9,7 +9,7 @@
         <p class="login-description">Insira o seu e-mail para receber o link da redefinição de senha</p>
     </div>
     <div class="form-container">
-        <form action="{% url 'users:reset-confirm-set' %}" method="POST" class="login-form">
+        <form action="{% url 'users:password_reset_complete' %}" method="POST" class="login-form">
         {% csrf_token %}
             <div class="form-content">
                 {% for field in form %}
@@ -33,7 +33,7 @@
                 <p>OU</p>
 
                 <div class="form-group">
-                    <a href="{% url 'users:login' %}"><button type="button" class="back-btn">Voltar <i class="bi bi-arrow-return-left"></i></button></a>
+                    <a href="{% url 'users:login_view' %}"><button type="button" class="back-btn">Voltar <i class="bi bi-arrow-return-left"></i></button></a>
                 </div>
             </div>
         </form>
