--- a/base_templates/global/partials/head_page_form.html
+++ b/base_templates/global/partials/head_page_form.html
@@ -14,7 +14,8 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
-    <script src="{% static 'global/js/script.js' %}" defer></script>
+    <script src="{% static 'global/js/menu.js' %}" defer></script>
+    <script src="{% static 'global/js/message.js' %}" defer></script>
     <link rel="stylesheet" href="{% static 'global/css/message.css' %}">
     <link rel="stylesheet" href="{% static 'global/css/menu.css' %}">
     <link rel="stylesheet" href="{% static 'users/css/styles.css' %}">
