--- a/base_templates/global/partials/messages.html
+++ b/base_templates/global/partials/messages.html
@@ -1,5 +1,5 @@
 {% if messages %}
-    <div class="main-content center container messages-container">
+    <div class="main-content center container messages-container" id="messages_container">
         {% for message in messages %}
             <div class="message {{ message.tags }}">
                 {{ message }}
