--- a/admin_panel/templates/admin_painel/pages/member_edit.html
+++ b/admin_panel/templates/admin_painel/pages/member_edit.html
@@ -1,10 +1,10 @@
 {% extends 'global/pages/base_painel_adm.html' %}
 
-{% block title %}Editar Membro{% endblock %}
+{% block title %}Editar Aluno{% endblock %}
 
 {% block content %}
-<main class="container">
-    <h1>Editar Membro: {{ member.full_name }}</h1>
+<main class="container-form-edit-member">
+    <h1>Editar Aluno: {{ member.full_name }}</h1>
     <form method="POST" action="{% url 'members:edit_member_update' member.id %}">
         {% csrf_token %}
         
@@ -25,6 +25,7 @@
         {% endfor %}
         
         <button type="submit" class="btn btn-primary">Salvar Alterações</button>
+        <a href="{% url 'admin_painel:members' %}" class="btn btn-danger">Cancelar</a>
     </form>
 </main>
 {% endblock %}
