--- a/admin_panel/templates/admin_painel/pages/members.html
+++ b/admin_panel/templates/admin_painel/pages/members.html
@@ -1,29 +1,26 @@
 {% extends 'global/pages/base_painel_adm.html' %}
 
-{% block title %}Página de Membros{% endblock title %}
+{% block title %}Página de Alunos{% endblock title %}
 
 {% block content %}
 <main class="students-panel container">
-    <h1 class="title-page-alunos">Gestão de Membros</h1>
+    <h1 class="title-page-alunos">Gestão de Alunos</h1>
     
     <!-- Botão para adicionar novo aluno -->
     <div class="add-student-button">
-        <button class="btn btn-add-student" id="add-student-btn">Adicionar membro</button>
+        <button class="btn btn-add-student" id="add-student-btn">Adicionar Aluno</button>
     </div>
 
-    <!-- Lista de alunos -->
     <section class="students-list">
-        <h2 class="center">Membros Cadastrados</h2>
+        <h2 class="center">Alunos Cadastrados: </h2>
         <div class="students-cards">
             {% for member in members %}
                 {% include "admin_painel/partials/member.html" %}
             {% endfor %}
-            <!-- Replique este bloco para mais alunos -->
         </div>
     </section>
     
 
-    <!-- Formulário Modal para adicionar aluno -->
     <div class="modal-overlay" id="modal-overlay">
         <div class="modal-container">
             <h3>Adicionar Aluno</h3>
