--- a/admin_panel/templates/admin_painel/partials/member.html
+++ b/admin_panel/templates/admin_painel/partials/member.html
@@ -13,6 +13,7 @@
                 Inativo
             {% endif %}
         </span></p>
+        <p><strong>Data do pagamento:</strong> {{ member.payment_date }}</p>
     </div>
     <div class="student-actions">
         <a href="{% url 'admin_painel:edit_member_view' member.id %}" class="btn btn-secondary">Editar</a>
