--- a/admin_panel/templates/admin_painel/partials/member.html
+++ b/admin_panel/templates/admin_painel/partials/member.html
@@ -10,13 +10,17 @@
             {% if member.is_active %}
                 Ativo
             {% else %}
-                Inativo
+                Pendente
             {% endif %}
         </span></p>
-        <p><strong>Data do pagamento:</strong> {{ member.payment_date }}</p>
+        <p><strong>Data do pagamento:</strong> {{ member.last_payment_date }}</p>
     </div>
     <div class="student-actions">
         <a href="{% url 'admin_painel:edit_member_view' member.id %}" class="btn btn-secondary">Editar</a>
         <a href="{% url 'members:delete_member' member.id %}" class="btn btn-danger">Excluir</a>
+
+        {% if member.is_active is False %}
+        <a href="{% url 'admin_painel:add_payment_view' member.id %}" class="btn btn-add">Registrar pagamento</a>
+        {% endif %}
     </div>
 </div>
