feat: pagina de finanças adicionadas e metodos de classe para Payment

--- a/admin_panel/templates/admin_panel/pages/member_edit.html
+++ b/admin_panel/templates/admin_panel/pages/member_edit.html
@@ -25,7 +25,7 @@
         {% endfor %}
         
         <button type="submit" class="btn btn-primary">Salvar Alterações</button>
-        <a href="{% url 'admin_painel:members' %}" class="btn btn-danger">Cancelar</a>
+        <a href="{% url 'admin_panel:members' %}" class="btn btn-danger">Cancelar</a>
     </form>
 </main>
 {% endblock %}
