--- a/base_templates/global/partials/head_page_adm.html
+++ b/base_templates/global/partials/head_page_adm.html
@@ -14,11 +14,12 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
-    <script src="{% static 'global/js/menu.js' %}" defer></script>
-    <script src="{% static 'global/js/message.js' %}" defer></script>
-    <script src="{% static 'admin_painel/js/script.js' %}" defer></script>
+    <link rel="shortcut icon" href="{% static 'global/img/favicon.ico' %}" type="image/x-icon">
     <link rel="stylesheet" href="{% static 'global/css/message.css' %}">
     <link rel="stylesheet" href="{% static 'global/css/menu.css' %}">
-    <link rel="stylesheet" href="{% static 'admin_painel/css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'admin_panel/css/styles.css' %}">
+    <script src="{% static 'global/js/menu.js' %}" defer></script>
+    <script src="{% static 'global/js/message.js' %}" defer></script>
+    <script src="{% static 'admin_panel/js/script.js' %}" defer></script>
     
     
