--- a/admin_panel/templates/admin_panel/pages/add_payment.html
+++ b/admin_panel/templates/admin_panel/pages/add_payment.html
@@ -25,7 +25,7 @@
         
         <div class="form-buttons">
             <button type="submit" class="btn btn-primary">Salvar</button>
-            <a href="{% url 'admin_painel:members' %}" class="btn btn-danger">Cancelar</a>
+            <a href="{% url 'admin_panel:members' %}" class="btn btn-danger">Cancelar</a>
         </div>
     </form>
 </main>
