--- a/admin_panel/templates/admin_panel/partials/member.html
+++ b/admin_panel/templates/admin_panel/partials/member.html
@@ -16,11 +16,11 @@
         <p><strong>Data do pagamento:</strong> {{ member.last_payment_date }}</p>
     </div>
     <div class="student-actions">
-        <a href="{% url 'admin_painel:edit_member_view' member.id %}" class="btn btn-secondary">Editar</a>
+        <a href="{% url 'admin_panel:edit_member_view' member.id %}" class="btn btn-secondary">Editar</a>
         <a href="{% url 'members:delete_member' member.id %}" class="btn btn-danger">Excluir</a>
 
         {% if member.is_active is False %}
-        <a href="{% url 'admin_painel:add_payment_view' member.id %}" class="btn btn-add">Registrar pagamento</a>
+        <a href="{% url 'admin_panel:add_payment_view' member.id %}" class="btn btn-add">Registrar pagamento</a>
         {% endif %}
     </div>
 </div>
