--- a/base_templates/global/partials/menu.html
+++ b/base_templates/global/partials/menu.html
@@ -20,7 +20,7 @@
         </span>
         <span class="menu-link-container">
           <img src="{% static 'global/img/alunos-icon.png' %}" alt="Icone de Alunos">
-          <a href="{% url 'admin_panel:members' %}">MEMBROS</a>
+          <a href="{% url 'admin_panel:members' %}">ALUNOS</a>
         </span>
         <span class="menu-link-container">
           <img src="{% static 'global/img/financeiro-icon.png' %}" alt="Icone de Financeiro">
