--- a/admin_panel/templates/admin_panel/pages/finance.html
+++ b/admin_panel/templates/admin_panel/pages/finance.html
@@ -38,7 +38,6 @@
                 </ul>
             </div>
 
-            <!-- Transações Recentes -->
             <div class="transaction-list">
                 <h2>Pagamentos Recentes</h2>
                 <ul>
@@ -47,6 +46,12 @@
                     {% endfor %}
                 </ul>
             </div>        
+        </div>
+
+        <div class="download-report">
+            <a href="{% url 'admin_panel:generate_pdf_report' %}" class="btn btn-primary">
+                <i class="fas fa-download"></i> Baixar Relatório
+            </a>
         </div>
             
     </div>
