--- a/admin_panel/templates/reports/gym_current_day_report.html
+++ b/admin_panel/templates/reports/gym_current_day_report.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gym Management Report</title>
+    <title>Relatório Diário da Academia</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -31,33 +31,56 @@
         .payment-item p {
             margin: 2px 0;
         }
+        hr {
+            border: none;
+            border-top: 1px solid #ddd;
+            margin: 10px 0;
+        }
+        .obs{
+            font-size: 1rem;
+            font-style: italic;
+        }
     </style>
 </head>
 <body>
-    <h1>Gym Management Report</h1>
-    <h2>Date: {{ date }}</h2>
+    <h1>Relatório Diário da Academia</h1>
+    <h2>Data: {{ date }}</h2>
 
     <div class="summary">
         <h3>Resumo de Alunos</h3>
+        <br>
+        <p class="obs"><em>OBS: Este relatório contém informações detalhadas sobre os alunos que estavam ativos e pendentes na data especificada.</em></p>
+        <br>
         <p><strong>Alunos Ativos:</strong> {{ active_members }}</p>
-        <p><strong>Alunos Pendentes:</strong> {{ inactive_members }}</p>
+        <p><strong>Alunos Inativos:</strong> {{ inactive_members }}</p>
     </div>
 
     <div class="summary">
-        <h3>Resumo da receita</h3>
-        <p><strong>Receita total:</strong> ${{ total_revenue|floatformat:2 }}</p>
+        <h3>Resumo de Receita</h3>
+        <br>
+        <p class="obs"><em>OBS: Este relatório contém informações detalhadas sobre a receita da data especificada.</em></p>
+        <p><strong>Receita Total:</strong> R${{ total_revenue|floatformat:2 }}</p>
+        
     </div>
 
+    {% if payments %}
     <div class="payment-details">
         <h3>Detalhes dos Pagamentos:</h3>
+        <br>
+        <p class="obs"><em>OBS: Este relatório contém informações detalhadas sobre os pagamentos que foram efetuados na data especificada.</em></p>
         {% for payment in payments %}
         <div class="payment-item">
             <p><strong>Aluno:</strong> {{ payment.member.full_name }}</p>
             <p><strong>Data do Pagamento:</strong> {{ payment.payment_date }}</p>
-            <p><strong>Valor:</strong> ${{ payment.amount|floatformat:2 }}</p>
+            <p><strong>Valor:</strong> R${{ payment.amount|floatformat:2 }}</p>
         </div>
         <hr>
         {% endfor %}
     </div>
+    {% else %}
+    <div class="payment-details">
+        <h3>Nenhum Pagamento Registrado Hoje</h3>
+    </div>
+    {% endif %}
 </body>
 </html>
