refactor: mundando o lugar das funções de add_member, delete_member, edit_member, add_payment

--- a/admin_panel/templates/admin_panel/pages/add_payment.html
+++ b/admin_panel/templates/admin_panel/pages/add_payment.html
@@ -5,7 +5,7 @@
 {% block content %}
 <main class="container-form-payment">
     <h1>Adicionar Pagamento para: {{ member.full_name }}</h1>
-    <form method="POST" action="{% url 'members:add_payment' member.id %}" class="form">
+    <form method="POST" action="{% url 'admin_panel:add_payment' member.id %}" class="form">
         {% csrf_token %}
         
         {% for field in form %}
