--- a/admin_panel/templates/admin_panel/pages/home.html
+++ b/admin_panel/templates/admin_panel/pages/home.html
@@ -19,7 +19,7 @@
             </div>
             <div class="card">
                 <h3>Receita do Mês</h3>
-                <p class="count">R$ {{ value_total_month }}</p>
+                <p class="count">R$ {{ profit_total_month }}</p>
                 {% comment %} <a href="#" class="card-link">Ver detalhes</a> {% endcomment %}
             </div>
             <div class="card">
