--- a/admin_panel/templates/admin_panel/pages/finance.html
+++ b/admin_panel/templates/admin_panel/pages/finance.html
@@ -57,13 +57,14 @@
 
         <div class="download-report">
             <h2>Download de Relatórios</h2>
-            <br>
-            <a href="{% url 'admin_panel:generate_pdf_general_report' %}" class="btn btn-download">
-                <i class="fas fa-download"></i> Baixar Relatório geral
-            </a>
-            <a href="{% url 'admin_panel:generate_pdf_report_of_current_day' %}" class="btn btn-download">
-                <i class="fas fa-download"></i> Baixar Relatório do dia atual
-            </a>
+            <div class="download-report-container">
+                <a href="{% url 'admin_panel:generate_pdf_general_report' %}" class="btn btn-download">
+                    <i class="fas fa-download"></i> Relatório geral
+                </a>
+                <a href="{% url 'admin_panel:generate_pdf_report_of_current_day' %}" class="btn btn-download">
+                    <i class="fas fa-download"></i> Relatório do dia atual
+                </a>
+            </div>
         </div>        
             
     </div>
