refactor: adicionando formatação de cpf e telefone em quanto o usuario digita, tirando tag script dentro do html e separando em um arquivo js

--- a/admin_panel/templates/admin_panel/pages/member_edit.html
+++ b/admin_panel/templates/admin_panel/pages/member_edit.html
@@ -1,5 +1,11 @@
 {% extends 'global/pages/base_painel_adm.html' %}
 
+{% load static %}
+
+{% block additional_tags %}
+<script src="{% static 'admin_panel/js/formatter-phone.js' %}" defer></script>
+{% endblock additional_tags %}
+
 {% block title %}Editar Aluno{% endblock %}
 
 {% block content %}
